[tool.poetry]
name = "llm-osint"
version = "0.1.0"
description = ""
authors = ["Nikita Kazeev <kazeevn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.2.5"
openai = "^1.35.1"
black = "^24.4.2"
requests = "^2.32.3"
bs4 = "^0.0.2"
langchain-community = "^0.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
